--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
       <groupId>org.glassfish.web</groupId>
       <artifactId>el-impl</artifactId>
       <version>2.2</version>
-      <scope>runtime</scope>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
