--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <!-- コンパイラはJDK1.7指定 -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
@@ -36,17 +37,31 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- 
     <dependency>
       <groupId>javax.el</groupId>
       <artifactId>el-api</artifactId>
       <version>2.2</version>
-      <scope>runtime</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.glassfish.web</groupId>
       <artifactId>el-impl</artifactId>
       <version>2.2</version>
-      <scope>test</scope>
+      <scope>runtime</scope>
+    </dependency>
+     -->
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+      <version>3.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.el</artifactId>
+      <version>3.0.0</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
